--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -234,7 +234,15 @@
         border: 1px solid #fff;
         border-radius: 40px;
         padding: 0 16px;
-        width: 100%;
+        width: 80%;
+        margin-bottom: 12px;
+    }
+
+    #emailForm {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        flex-direction: column;
     }
 
     .footer__section form button {
@@ -251,13 +259,6 @@
         fill: white;
     }
 
-    #emailForm {
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-        gap: 12px;
-        flex-direction: row;
-    }
 
     .footer__logo {
         width: 56px;
